# syncplay-rs

./: Cargo.toml  flake.nix  rustfmt.toml
src/: lib.rs
src/mpv/: mod.rs
