[package]
name = "syncplay-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
async-stream = "0.3.3"
bytes = "1.2.1"
env_logger = "0.9.0"
futures = "0.3.23"
log = "0.4.17"
quinn = "0.8.5"
rcgen = "0.9.3"
rkyv = { version = "0.7.39", features = ["validation"] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.32"
time = "0.3.14"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["codec", "io"] }
